<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@color/white_smoke"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:padding="5dp" android:gravity="center_vertical"
		android:background="@drawable/bg_header">
		<ImageView android:id="@+id/imageView1" android:src="@drawable/title_test"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:scaleType="centerInside"></ImageView>
		<TextView android:layout_marginLeft="5dip" android:textSize="14dip"
			android:textStyle="bold" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content" android:id="@+id/listtest_title"
			android:layout_height="wrap_content" android:textColor="@color/black"
			android:text="@string/login_title"></TextView>
	</LinearLayout>
	<ImageView android:id="@+id/imageView2" android:src="@drawable/icon_staff"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal"></ImageView>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
		android:layout_width="fill_parent" android:id="@+id/linearLayout1">
		<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content" android:textColor="@color/black"
			android:layout_width="wrap_content" android:text="@string/login_user"></TextView>
		<EditText android:layout_height="wrap_content"
			android:layout_marginLeft="5dp" android:layout_weight="1"
			android:id="@+id/edt_login_username" android:layout_width="wrap_content">
			<requestFocus></requestFocus>
		</EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
		android:layout_width="fill_parent" android:id="@+id/linearLayout3">
		<TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content" android:textColor="@color/black"
			android:layout_width="wrap_content" android:text="@string/login_password"></TextView>
		<EditText android:layout_height="wrap_content"
			android:layout_marginLeft="5dp" android:layout_weight="1"
			android:id="@+id/edt_login_password" android:layout_width="wrap_content"
			android:inputType="textPassword"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/linearLayout4"
		android:gravity="center_horizontal">
		<Button android:layout_height="wrap_content" android:text="@string/login_ok"
			android:id="@+id/btn_login_ok" android:layout_width="wrap_content"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" android:text="@string/login_exit"
			android:id="@+id/btn_login_exit" android:layout_width="wrap_content"></Button>
	</LinearLayout>
</LinearLayout>
